Clean up code style and javadoc warnings (#305)